2004-08-29  Karl Runge <runge@karlrunge.com>
	* x11vnc: yet another pointer input handling algorithm in
	  check_user_input(), revert to previous with -old_pointer2.
	* modifiy prepare_x11vnc_dist.sh to install tightvnc Java viewer
	  in $prefix/share/x11vnc/classes

2004-08-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* */*.[ch]: API changes: global functions/structures should have
	*   either "rfb", "sra" or "zrle" as prefix, while structure members
	*   should not...

2004-08-29  Karl Runge <runge@karlrunge.com>
	* x11vnc: changes in cursor shape handling: use rfbSetCursor()
	* cursor shape options: -cursor, -cursor (X|some|most)
	* -vncconnect the default. 
	* configure.ac: add more macros for X extensions.

2004-08-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: -overlay to fix colors with Sun 8+24 overlay visuals.
	* -sid option.

2004-08-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: manpage and README
	* fix XKBlib.h detection on *BSD

2004-07-31  Karl Runge <runge@karlrunge.com>
	* x11vnc: -cursorpos now the default

2004-07-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: -add_keysyms dynamically add missing keysyms to X server

2004-07-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: first pass at doing modtweak via XKEYBOARD extension (-xkb)
	* -skip_keycodes; reset modtweaks on event MappingNotify.
	* fix bugs wrt PRIMARY handling.
	* continuation lines "\" in x11vncrc.  

2004-07-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: modtweak is now the default
	* check X11/XKBlib.h in configure.ac to work around Solaris 7 bug.

2004-07-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: norepeat to turn off X server autorepeat when clients exist,
	  let the client side do the autorepeating.

2004-06-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: add "-scale fraction" for global server-side scaling.

2004-06-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: simple ~/.x11vncrc config file support, -rc, -norc
